--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "test:ui": "vitest --ui",
     "test:run": "vitest run",
     "dev": "vite",
-    "build": "tsc && vite build"
+    "build": "tsc && vite build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "devDependencies": {
     "@vitest/ui": "^0.34.1",
+    "gh-pages": "^6.1.1",
     "typescript": "^5.1.6",
-    "vite": "^4.2.0",
+    "vite": "^4.5.2",
     "vitest": "^0.34.1"
   },
   "dependencies": {
