--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://wkeebs.github.io/frp-tetris",
   "name": "assignment1",
   "type": "module",
   "private": true,
@@ -9,7 +10,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
     "@vitest/ui": "^0.34.1",
